Qt Mumtimedia - fix build for iOS

Since RestrictedBool conversion operator was introduced, objective-C
method calls require explicit .data() on our smart pointers.

Fixes: QTBUG-79686
Change-Id: Ie32ebf0442cd56a01466aa58b89651d7c293de6d
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>