src/plugins/avfoundation/camera/avfmediaassetwriter.mm
@@ -413,7 +413,7 @@ enum WriterState
 
 
     m_audioOutput.reset([[AVCaptureAudioDataOutput alloc] init]);
-    if (m_audioOutput && [captureSession canAddOutput:m_audioOutput]) {
+    if (m_audioOutput.data() && [captureSession canAddOutput:m_audioOutput]) {
         [captureSession addOutput:m_audioOutput];
     } else {
         qDebugCamera() << Q_FUNC_INFO << "failed to add audio output";
@@ -431,7 +431,7 @@ enum WriterState
 {
     Q_ASSERT(m_service && m_service->videoOutput()
              && m_service->videoOutput()->videoDataOutput());
-    Q_ASSERT(m_assetWriter);
+    Q_ASSERT(m_assetWriter.data());
 
     m_cameraWriterInput.reset([[AVAssetWriterInput alloc] initWithMediaType:AVMediaTypeVideo
                                                           outputSettings:m_videoSettings
@@ -451,7 +451,7 @@ enum WriterState
 
     m_cameraWriterInput.data().expectsMediaDataInRealTime = YES;
 
-    if (m_audioOutput) {
+    if (m_audioOutput.data()) {
         CMFormatDescriptionRef sourceFormat = m_audioCaptureDevice ? m_audioCaptureDevice.activeFormat.formatDescription : 0;
         m_audioWriterInput.reset([[AVAssetWriterInput alloc] initWithMediaType:AVMediaTypeAudio
                                                              outputSettings:m_audioSettings
@@ -479,7 +479,7 @@ enum WriterState
 
     [m_service->videoOutput()->videoDataOutput() setSampleBufferDelegate:self queue:m_videoQueue];
 
-    if (m_audioOutput) {
+    if (m_audioOutput.data()) {
         Q_ASSERT(m_audioQueue);
         [m_audioOutput setSampleBufferDelegate:self queue:m_audioQueue];
     }
